Trying to correct the website

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://janbrederecke.github.io/website/"
 languageCode = "en"
 defaultContentLanguage = "en"
 title = "JAN BREDERECKE"
