--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@
 .Rhistory
 .RData
 .Ruserdata
+## OS Files
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# OSX
+.DS_Store
+
+# Linux 
+.directory
