--- a/config.toml
+++ b/config.toml
@@ -122,7 +122,7 @@ disqusShortname = "yourdiscussshortname"
     #Dribble = "xxxx"
     #Wordpress = "xxxx"
     #Vine = "xxxx"
-    Googlescholar = "xxxx"
+    Googlescholar = "fzccSmMAAAAJ"
     #Researchgate = "xxxx"
     #Mastodon = "xxxx"
     #Thingiverse = "xxxx"
