--- a/config.toml
+++ b/config.toml
@@ -43,7 +43,7 @@ disqusShortname = "yourdiscussshortname"
     since = 2022
     author = "JAN BREDERECKE"               # Author's name
     subsubtitle = "Jan Brederecke, M.Sc."
-    subtitle = "Data scientist @University Heart & Vascular Center Hamburg"# Subtitle
+    subtitle = "Data scientist in cardiovascular epidemiology"# Subtitle
     subtitletitle = "👋 Hi my name is Jan and I like all things data science, open source and especially R."
     cdn_url = ""           # Base CDN URL
     home_mode = "" # post or other
