--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ paginate = 10
 enableEmoji = true
 enableRobotsTXT = true
 googleAnalytics = ""
-disqusShortname = "yourdiscussshortname"
+disqusShortname = ""
 
 [sitemap]
   changefreq = "monthly"
@@ -128,10 +128,10 @@ disqusShortname = "yourdiscussshortname"
     #Thingiverse = "xxxx"
 
 [params.share]
-Twitter = true
+#Twitter = true
 #Facebook = true
 #Reddit = true
-Linkedin = true
+#Linkedin = true
 #Pinterest = true
 #HackerNews = true
 #Mix = true
