--- a/config.toml
+++ b/config.toml
@@ -44,7 +44,7 @@ disqusShortname = ""
     author = "JAN BREDERECKE"               # Author's name
     subsubtitle = "Jan Brederecke, M.Sc."
     subtitle = "Data scientist in cardiovascular epidemiology"# Subtitle
-    subtitletitle = "👋 Hi my name is Jan and I like all things data science, open source and especially R."
+    subtitletitle = "👋 Hi my name is Jan and I like all things data science, open source, and especially R."
     cdn_url = ""           # Base CDN URL
     home_mode = "" # post or other
     dateFormatToUse = "" # set date format, default "2 January 2006"
